# premarket

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: niveles_referencia.md
scripts/: analyze_predictability.py  calculate_indicators.py  calculate_open_indicators.py  fetch_market_data.py  generate_scorecard.py  gex_dashboard.py  gex_heatmap.py  gex_intraday.py  gex_narrative.py  log_history.py  notify_telegram.py  run.py  tastytrade_client.py
specs/: fetch_tastytrade_sdk.md  fix_mancini_shared_log.md  gex_advanced_analytics.md  gex_enrich_0dte.md  gex_heatmap.md  gex_mancini_integration.md  gex_snapshots_intraday.md  ind_atr_ratio.md  ind_ivr.md  ind_net_gex.md  ind_open_gap_behavior.md  ind_open_or_position.md  ind_open_range_expansion.md  ind_open_realized_vol.md  ind_open_vix_delta.md  ind_open_vwap_position.md  ind_overnight_gap.md  ind_vix9d_vix_ratio.md  ind_vix_vxv_slope.md  mancini_auto_levels.md  mancini_execution_gate.md  mancini_health_manager.md  mancini_intraday_updates.md  mancini_order_dryrun.md  mancini_overnight_levels.md  mancini_plan_chart.md  mancini_realtime_tweets.md  mancini_replicant.md  mancini_signal_quality_filters.md  mancini_stale_plan_fallback.md  mancini_trade_tracking.md  mancini_weekly_alignment.md  mancini_weekly_plan.md  scheduled_tasks.md  skill_premarket_analysis.md  workflow_combined_scorecard.md  workflow_history.md  workflow_net_gex_dscore.md  workflow_open_phase.md  workflow_pipeline.md  (+2 more)
tests/: test_analyze_predictability.py  test_chart.py  test_dealer_flow_alerts.py  test_execution_gate.py  test_gex_heatmap.py  (+40 more)
(+30 files in other folders)
