[project]
name = "premarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "yfinance>=1.2.0",
    "tastytrade>=9.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]
