[project]
name = "premarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "yfinance>=1.2.0",
    "tastytrade>=9.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "scipy>=1.13",
    "anthropic>=0.40",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
]
